--- a/OAD_TP3/OAD_TP3.vcxproj
+++ b/OAD_TP3/OAD_TP3.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Unit1.h" />
+    <ClInclude Include="Unit2.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
@@ -157,6 +158,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Unit1.cpp" />
+    <ClCompile Include="Unit2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
